Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -54,4 +54,21 @@ content_blocks:
     styles:
       background_variant: light
       content_alignment: center
+  - _bookshop_name: sections/embed
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary Heading
+      description: Description text to compliment the block
+      embed:
+        _bookshop_name: generic/custom-embed
+        embed:
+        styles:
+          custom_max_width:
+          ratio: default
+      button:
+    styles:
+      background_variant: light
+      content_alignment: center
 ---
