Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,11 +64,20 @@ content_blocks:
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
-          <script
-          src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-          type="module"></script> 
-
-              <dotlottie-player src="https://lottie.host/8763bd2d-71e3-46c8-bda5-8da83be81988/af4Dio5vh8.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
+          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sunsets
+          don&#39;t get much better than this one over <a
+          href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>.
+          <a
+          href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a>
+          <a
+          href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a>
+          <a
+          href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash;
+          US Department of the Interior (@Interior) <a
+          href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May
+          5, 2014</a></blockquote> <script async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"></script>
         styles:
           custom_max_width:
           ratio: default
