--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,13 +15,13 @@ content_blocks:
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
-          <iframe width="200" height="600"
+          <iframe
           src="https://www.youtube.com/embed/jfKfPfyJRdk?si=HbbcdXAL3kjNvCxw"
           title="YouTube video player" frameborder="0" allow="accelerometer;
           autoplay; clipboard-write; encrypted-media; gyroscope;
           picture-in-picture; web-share" allowfullscreen></iframe>
         styles:
-          custom_max_width: 9
+          custom_max_width: 300
           ratio: 1 / 1
       button:
         _bookshop_name: generic/button
@@ -79,8 +79,8 @@ content_blocks:
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"></script>
         styles:
-          custom_max_width:
-          ratio: default
+          custom_max_width: 200
+          ratio: 1 / 1.25
       button:
     styles:
       background_variant: light
