--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,18 +64,10 @@ content_blocks:
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sunsets
-          don&#39;t get much better than this one over <a
-          href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>.
           <a
-          href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a>
-          <a
-          href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a>
-          <a
-          href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash;
-          US Department of the Interior (@Interior) <a
-          href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May
-          5, 2014</a></blockquote> <script async
+          href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw"
+          class="twitter-mention-button" data-show-count="false">Tweet to
+          @TwitterDev</a><script async
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"></script>
         styles:
