Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,10 +64,9 @@ content_blocks:
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
-          <a
-          href="https://twitter.com/intent/tweet?screen_name=TwitterDev&ref_src=twsrc%5Etfw"
-          class="twitter-mention-button" data-show-count="false">Tweet to
-          @TwitterDev</a><script async
+          <a class="twitter-timeline"
+          href="https://twitter.com/XDevelopers/lists/national-parks?ref_src=twsrc%5Etfw">A
+          Twitter List by XDevelopers</a> <script async
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"></script>
         styles:
