--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,14 +64,23 @@ content_blocks:
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
-          <a class="twitter-timeline"
-          href="https://twitter.com/XDevelopers/lists/national-parks?ref_src=twsrc%5Etfw">A
-          Twitter List by XDevelopers</a> <script async
+          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sunsets
+          don&#39;t get much better than this one over <a
+          href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>.
+          <a
+          href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a>
+          <a
+          href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a>
+          <a
+          href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash;
+          US Department of the Interior (@Interior) <a
+          href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May
+          5, 2014</a></blockquote> <script async
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"></script>
         styles:
           custom_max_width: -1
-          ratio: 1 / 1.25
+          ratio: default
       button:
     styles:
       background_variant: light
