Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,8 +9,8 @@ content_blocks:
     content:
       heading:
         _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
+        eyebrow_headline:
+        primary_heading: YouTube
       description: Description text to compliment the block
       embed:
         _bookshop_name: generic/custom-embed
@@ -39,8 +39,8 @@ content_blocks:
     content:
       heading:
         _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
+        eyebrow_headline:
+        primary_heading: Google Docs
       description: Description text to compliment the block
       embed:
         _bookshop_name: generic/custom-embed
@@ -58,8 +58,8 @@ content_blocks:
     content:
       heading:
         _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
+        eyebrow_headline:
+        primary_heading: Tweet
       description: Description text to compliment the block
       embed:
         _bookshop_name: generic/custom-embed
@@ -89,8 +89,8 @@ content_blocks:
     content:
       heading:
         _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
+        eyebrow_headline:
+        primary_heading: Spotify
       description: Description text to compliment the block
       embed:
         _bookshop_name: generic/custom-embed
