Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,7 +21,6 @@ content_blocks:
           autoplay; clipboard-write; encrypted-media; gyroscope;
           picture-in-picture; web-share" allowfullscreen></iframe>
         styles:
-          custom_max_width: -1
           ratio: 1 / 1
       button:
         _bookshop_name: generic/button
@@ -32,6 +31,7 @@ content_blocks:
         disabled: false
         arrow: right
         onclick:
+      show_note: true
     styles:
       background_variant: light
       content_alignment: center
@@ -48,9 +48,9 @@ content_blocks:
           <iframe
           src="https://docs.google.com/document/d/e/2PACX-1vQ9aWnwKR50Q5jW15YfJkrKkt92_-tyoQ-E4lN4lSWjYOvrtsisXDpCNpER1b6DVldx4qTjJCPIa7E_/pub?embedded=true"></iframe>
         styles:
-          custom_max_width:
           ratio: 1 / 1
       button:
+      show_note: true
     styles:
       background_variant: light
       content_alignment: center
@@ -79,9 +79,9 @@ content_blocks:
           src="https://platform.twitter.com/widgets.js"
           charset="utf-8"></script>
         styles:
-          custom_max_width: -1
           ratio: default
       button:
+      show_note: true
     styles:
       background_variant: light
       content_alignment: center
@@ -101,9 +101,9 @@ content_blocks:
           encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"></iframe>
         styles:
-          custom_max_width:
           ratio: 1 / 1
       button:
+      show_note: true
     styles:
       background_variant: light
       content_alignment: center
@@ -229,7 +229,6 @@ content_blocks:
           (@longlostjohncarpenterfilms)</a></p></div></blockquote> <script async
           src="//www.instagram.com/embed.js"></script>
         styles:
-          custom_max_width:
           ratio: default
       button:
       show_note: true
@@ -251,7 +250,6 @@ content_blocks:
           width="640" height="382" frameborder="0" marginheight="0"
           marginwidth="0">Loading…</iframe>
         styles:
-          custom_max_width:
           ratio: default
       button:
       show_note: true
