--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -62,4 +62,61 @@ content_blocks:
     styles:
       background_variant: light
       content_alignment: center
+  - _bookshop_name: sections/price-list
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary Heading
+      description: Description text to compliment the block
+      lists:
+        - list_heading: List heading
+          list_items:
+            - label: List item
+              detail: $$
+    styles:
+      background_variant: light
+      content_alignment: center
+  - _bookshop_name: structure/left-right-block
+    data:
+      heading:
+      content: ''
+      buttons: []
+      icons:
+        - _bookshop_name: generic/labelled-icon
+          arrangement: inline
+          text:
+          icon:
+            _bookshop_name: generic/icon
+            hero_icon_name: academic-cap
+            icon_size: small
+            icon_type: solid
+            rounded_border: false
+            color: '#f9f9fb'
+    styles:
+      orientation:
+      image:
+      background_variant: Dark
+  - _bookshop_name: sections/centered-large-asset
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary Heading
+      description: Description text to compliment the block
+      asset:
+        _bookshop_name: generic/image
+        image_path: /uploads/one-piece-square-universal-base-na-01-zxx.jpg
+        image_alt:
+      button:
+        _bookshop_name: generic/button
+        url: '#'
+        open_in_new_tab: false
+        text: Button text
+        variant: primary
+        disabled: false
+        arrow: right
+        onclick:
+    styles:
+      background_variant: light
 ---
