Refactor: changing CSS styles to align with the Figma doc (after conversation with Design)

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,6 +29,6 @@ content_blocks:
         arrow: right
         onclick:
     styles:
-      orientation: Left
+      orientation: Right
       background_variant: dark
 ---
