Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,6 +19,14 @@ content_blocks:
       contact_details:
         - text: mybusiness@business.com
           hero_icon_name: envelope
+        - text: mybusiness@business.com
+          hero_icon_name: envelope
+        - text: mybusiness@business.com
+          hero_icon_name: envelope
+        - text: mybusiness@business.com
+          hero_icon_name: envelope
+        - text: mybusiness@business.com
+          hero_icon_name: envelope
       button:
         _bookshop_name: generic/button
         url: '#'
@@ -29,7 +37,7 @@ content_blocks:
         arrow: right
         onclick:
     styles:
-      orientation: Right
+      orientation: Left
       background_variant: dark
   - _bookshop_name: sections/form
     content:
