--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,35 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: sections/grid--gallery-images
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary Heading
+      description: Description text to compliment the block
+      gallery:
+        _bookshop_name: simple/gallery
+        images:
+          - _bookshop_name: generic/image
+            image_path: /assets/images/Hero--background-feature-2.png
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /assets/images/Left-Right--featured-image.png
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /assets/images/Hero--background-feature-3.png
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /assets/images/Hero--background-feature-4.png
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /assets/images/Testimonial--background-feature.png
+            image_alt:
+        button:
+          text: Load More
+          variant: primary
+    styles:
+      background_variant: light
 ---
