--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,9 +9,7 @@ content_blocks:
     content:
       social_icons: true
       heading:
-        bookshop: generic/component-heading
         primary_heading: A contact block
-        eyebrow_headline: ''
       description: >-
         This is a simple yet powerful block to display not only your location by
         using Google Maps, but also any other contact details you wish to share
@@ -29,7 +27,7 @@ content_blocks:
         _bookshop_name: generic/button
         url: '#'
         open_in_new_tab: false
-        text: Book Now
+        text: Button text
         variant: primary
         disabled: false
         arrow: right
