Chore: renamed block to match Figma file

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,7 @@ permalink: /
 draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
-  - _bookshop_name: sections/contact-block
+  - _bookshop_name: sections/Left-right-block--Featured-map
     content:
       social_icons: true
       heading:
