--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,6 +30,21 @@ content_blocks:
           - _bookshop_name: generic/image
             image_path: /assets/images/Testimonial--background-feature.png
             image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path:
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path:
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path:
+            image_alt:
         button:
           text: Load More
           variant: primary
