--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,6 +24,9 @@ content_blocks:
           - _bookshop_name: generic/image
             image_path: /assets/images/Hero--background-feature-3.png
             image_alt:
+          - _bookshop_name: generic/image
+            image_path: /assets/images/Hero--background-feature-3.png
+            image_alt:
         button:
           text: Load More
           variant: primary
