--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,13 +14,7 @@ content_blocks:
       description: Description text to compliment the block
       gallery:
         _bookshop_name: simple/gallery
-        images:
-          - _bookshop_name: generic/image
-            image_path: /assets/images/Hero--background-feature-2.png
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /assets/images/Left-Right--featured-image.png
-            image_alt:
+        images: []
         button:
           text: Load More
           variant: primary
