--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,7 +14,28 @@ content_blocks:
       description: Description text to compliment the block
       gallery:
         _bookshop_name: simple/gallery
-        images: []
+        images:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
         button:
           text: Load More
           variant: primary
