Fix: fixed gallery JS - pagination and button functionality appears to be working

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -36,6 +36,126 @@ content_blocks:
           - _bookshop_name: generic/image
             image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
             image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+        button:
+          text: Load More
+          variant: primary
+    styles:
+      background_variant: light
+  - _bookshop_name: sections/grid--gallery-images
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary Heading
+      description: Description text to compliment the block
+      gallery:
+        _bookshop_name: simple/gallery
+        images:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt:
         button:
           text: Load More
           variant: primary
