--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,7 @@ permalink: /
 draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
-  - _bookshop_name: simple/content-block
+  - _bookshop_name: simple/simple-text-block
     heading:
       _bookshop_name: generic/component-heading
       eyebrow_headline: Eyebrow Heading
