--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
+content_blocks: []
 ---
