Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,26 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: simple/simple-text-block
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: A simple textblock
+      text:
+        _bookshop_name: generic/text-block
+        text: >-
+          ### Provide all the necessary information
+
+
+          There are many reasons a website should have a terms of use agreement.
+          For example, a terms of use page would show the website is a
+          legitimate operation and increase user confidence. However, the most
+          important reasons a business should have a terms and conditions page
+          are to limit the business's liability, prevent users from abusing the
+          service, protect the site's intellectual property, and ensure that the
+          users comply with the site's terms.
+    styles:
+      background_variant: dark
 ---
