--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -255,13 +255,13 @@ content_blocks:
       heading:
         _bookshop_name: generic/component-heading
         eyebrow_headline:
-        primary_heading: Google Forms
+        primary_heading: PDF
       description: Description text to compliment the block
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
-          <div id="adobe-dc-view"></div>
-          <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+          <div id="adobe-dc-view"></div> <script
+          src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
           <script type="text/javascript">
               document.addEventListener("adobe_dc_view_sdk.ready", function(){ 
                   var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
@@ -271,7 +271,7 @@ content_blocks:
                   }, {});
               });
           </script>
-        ratio: A4 Document
+        ratio: 1 / 1.41
       button:
       show_note: true
     styles:
