Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -46,7 +46,7 @@ content_blocks:
         embed: >-
           <iframe
           src="https://docs.google.com/document/d/e/2PACX-1vQ9aWnwKR50Q5jW15YfJkrKkt92_-tyoQ-E4lN4lSWjYOvrtsisXDpCNpER1b6DVldx4qTjJCPIa7E_/pub?embedded=true"></iframe>
-        ratio: 1 / 0.5
+        ratio: 1 / 1.41
       button:
       show_note: true
     styles:
@@ -106,10 +106,7 @@ content_blocks:
   - _bookshop_name: sections/embed
     content:
       heading:
-        _bookshop_name: generic/component-heading
-        eyebrow_headline:
-        primary_heading: Instagram
-      description: Description text to compliment the block
+      description:
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
@@ -228,7 +225,7 @@ content_blocks:
       button:
       show_note: true
     styles:
-      background_variant: light
+      background_variant: dark
       content_alignment: left
   - _bookshop_name: sections/embed
     content:
