Fix: added conditional check for heading or text
- if neither is present, hide the component entirely - fixes extra gap bug
- brings it in line with other components doing the same thing

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -35,12 +35,7 @@ content_blocks:
       background_variant: light
       content_alignment: center
   - _bookshop_name: sections/embed
-    content:
-      heading:
-        _bookshop_name: generic/component-heading
-        eyebrow_headline:
-        primary_heading: Google Docs
-      description: Description text to compliment the block
+    content:      
       embed:
         _bookshop_name: generic/custom-embed
         embed: >-
@@ -50,7 +45,7 @@ content_blocks:
       button:
       show_note: true
     styles:
-      background_variant: light
+      background_variant: dark
       content_alignment: center
   - _bookshop_name: sections/embed
     content:
