--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,10 +16,10 @@ content_blocks:
         _bookshop_name: simple/gallery
         images:
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: broken-path
+            image_alt: alt
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_path: 
             image_alt:
           - _bookshop_name: generic/image
             image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
