--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: 
+content_blocks:
   - _bookshop_name: sections/centered-large-asset
     content:
       heading:
@@ -57,4 +57,6 @@ content_blocks:
     styles:
       background_variant: light
       content_alignment: center
+  - _bookshop_name: generic/sample
+    text:
 ---
