Updated 2 files via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,5 +23,5 @@ content_blocks:
         arrow: right
         onclick:
     styles:
-      background_variant: light
+      background_variant: dark
 ---
