Refactor: changed all CSS styles throughout components and main sections

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,7 @@ content_blocks:
         open_in_new_tab: false
         text: Button text
         variant: primary
-        disabled: true
+        disabled: false
         arrow: right
         onclick:
     styles:
