Fix: fixed more references of 'dark' to secondary

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,5 +23,5 @@ content_blocks:
         arrow: right
         onclick:
     styles:
-      background_variant: dark
+      background_variant: secondary
 ---
