Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,7 +59,13 @@ content_blocks:
         eyebrow_headline: Eyebrow Heading
         primary_heading: Primary Heading
       description: Description text to compliment the block
-      lists: []
+      lists:
+        - list_heading: List heading
+          list_items:
+            - label: List item
+              detail: $$
+            - label: List item
+              detail: $$
     styles:
       background_variant: primary
       content_alignment: center
