Fix: changed heading to flat structure

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,8 +8,7 @@ content_blocks:
   - _bookshop_name: sections/Left-right-block--Featured-map
     content:
       social_icons: true
-      heading:
-        primary_heading: A contact block
+      heading: A contact block
       description: >-
         This is a simple yet powerful block to display not only your location by
         using Google Maps, but also any other contact details you wish to share
