Fix: changed references from 'orientation' to 'map_alignment'

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,6 +32,6 @@ content_blocks:
         arrow: right
         onclick:
     styles:
-      orientation: Left
+      map_alignment: Left
       background_variant: dark
 ---
