Feat: border around broken images (depends on refactor/color)

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,68 +16,35 @@ content_blocks:
         _bookshop_name: simple/gallery
         images:
           - _bookshop_name: generic/image
-            image_path: broken-path
-            image_alt: alt
+            image_path: 
+            image_alt: alt  
+          - _bookshop_name: generic/image
+            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+            image_alt: alt                      
           - _bookshop_name: generic/image
             image_path: 
-            image_alt:
+            image_alt: alt  
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: 
+            image_alt: alt  
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: 
+            image_alt: alt  
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: 
+            image_alt: alt  
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: 
+            image_alt: alt  
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: 
+            image_alt: alt  
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: 
+            image_alt: alt  
           - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
+            image_path: 
+            image_alt: alt  
         button:
           text: Load More
           variant: primary
