--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,128 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: sections/grid--gallery-images
-    content:
-      heading:
-        _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
-      description: Description text to compliment the block
-      gallery:
-        _bookshop_name: simple/gallery
-        images:
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt: alt                      
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-          - _bookshop_name: generic/image
-            image_path: 
-            image_alt: alt  
-        button:
-          text: Load More
-          variant: primary
-    styles:
-      background_variant: light
-  - _bookshop_name: sections/grid--gallery-images
-    content:
-      heading:
-        _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
-      description: Description text to compliment the block
-      gallery:
-        _bookshop_name: simple/gallery
-        images:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-          - _bookshop_name: generic/image
-            image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
-            image_alt:
-        button:
-          text: Load More
-          variant: primary
-    styles:
-      background_variant: light
+content_blocks: []
 ---
