--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -14,13 +14,17 @@ content_blocks:
         using Google Maps, but also any other contact details you wish to share
         with your customers.
       contact_details:
-        - text: 'Email address: mybusiness@business.com'
+        - _type: Email
+          text: 'Email address: mybusiness@business.com'
           hero_icon_name: envelope
-        - text: 'Phone number: 312 325 326'
+        - _type: Phone
+          text: 'Phone number: 312 325 326'
           hero_icon_name: phone
-        - text: 'Address: 1 Fake St, Faketown'
+        - _type: Address
+          text: 'Address: 1 Fake St, Faketown'
           hero_icon_name: map-pin
-        - text: 'Opening hours: 9-5pm, Monday to Friday'
+        - _type: Hours
+          text: 'Opening hours: 9-5pm, Monday to Friday'
           hero_icon_name: clock
       button:
         _bookshop_name: generic/button
