Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@ eleventyExcludeFromCollections: false
 content_blocks:
   - _bookshop_name: sections/Left-right-block--Featured-map
     content:
-      social_icons: true
+      display_social_icons: true
       heading: A contact block
       description: >-
         This is a simple yet powerful block to display not only your location by
@@ -36,6 +36,6 @@ content_blocks:
         arrow: right
         onclick:
     styles:
-      map_alignment: Left
+      map_alignment: Right
       background_variant: dark
 ---
