Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -45,6 +45,22 @@ content_blocks:
             required: false
             placeholder: Placeholder
             helper_text: Please enter an email
+          - _bookshop_name: generic/form/date-input
+            label: ''
+            id: 45f8e626-566a-4c6a-bf4f-9dccf26f18e9
+            required: false
+            min_today: false
+            min:
+            max_today: false
+            max:
+            helper_text:
+          - _bookshop_name: generic/form/time-input
+            label: ''
+            placeholder: ''
+            id: 6c0dc486-1a2e-41c7-a9a4-796956094542
+            helper_text:
+            min:
+            max:
         submit_button:
           text: Button text
           variant: primary
