--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,8 +59,8 @@ content_blocks:
             placeholder: ''
             id: 6c0dc486-1a2e-41c7-a9a4-796956094542
             helper_text:
-            min:
-            max:
+            min: 10:00 am
+            max: 10:00 am
         submit_button:
           text: Button text
           variant: primary
