Fix: make icons in inputs take main-color

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -45,6 +45,22 @@ content_blocks:
             required: false
             placeholder: Placeholder
             helper_text: Please enter an email
+          - _bookshop_name: generic/form/date-input
+            label: ''
+            id: 45f8e626-566a-4c6a-bf4f-9dccf26f18e9
+            required: false
+            min_today: false
+            min:
+            max_today: false
+            max:
+            helper_text:
+          - _bookshop_name: generic/form/time-input
+            label: ''
+            placeholder: ''
+            id: 6c0dc486-1a2e-41c7-a9a4-796956094542
+            helper_text:
+            min: 10:00 am
+            max: 10:02 am
         submit_button:
           text: Button text
           variant: primary
@@ -90,6 +106,6 @@ content_blocks:
         image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
         image_alt:
     styles:
-      image_alignment: left
+      image_alignment: full
       background_variant: primary
 ---
