Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: 
+content_blocks:
   - _bookshop_name: simple/card
     imagery:
       _bookshop_name: generic/icon
@@ -12,19 +12,33 @@ content_blocks:
       icon_size: small
       icon_type: solid
       rounded_border: false
-      color: '#f9f9fb'    
+      color: '#f9f9fb'
     heading:
       _bookshop_name: generic/component-heading
       eyebrow_headline: EYEBROW HEADLINE
       primary_heading: A simple text block
     content: >-
-      These versatile cards can be used to talk about your services or products, or
-      anything else you are keen to share with your audience. They come with an
-      action link to get your users into the journey you’ve crafted for them.
+      These versatile cards can be used to talk about your services or products,
+      or anything else you are keen to share with your audience. They come with
+      an action link to get your users into the journey you’ve crafted for them.
     button:
       url: ''
       text: Button text
       open_in_new_tab: false
     background_variant: dark
-  
+  - _bookshop_name: simple/card
+    imagery:
+      _bookshop_name: generic/image
+      image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+      image_alt:
+    heading:
+    content: >-
+      These versatile cards can be used to talk about your services or products,
+      or anything else you are keen to share with your audience. They come with
+      an action link to get your users into the journey you’ve crafted for them.
+    button:
+      url: ''
+      text: Button text
+      open_in_new_tab: false
+    background_variant:
 ---
