--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,26 +5,15 @@ permalink: /
 draft: false
 eleventyExcludeFromCollections: false
 content_blocks: 
-  - _bookshop_name: simple/card
+- _bookshop_name: simple/card
+  content:
     imagery:
-      _bookshop_name: generic/icon
-      hero_icon_name: academic-cap
-      icon_size: small
-      icon_type: solid
-      rounded_border: false
-      color: '#f9f9fb'    
     heading:
-      _bookshop_name: generic/component-heading
-      eyebrow_headline: EYEBROW HEADLINE
-      primary_heading: A simple text block
-    content: >-
-      These versatile cards can be used to talk about your services or products, or
-      anything else you are keen to share with your audience. They come with an
-      action link to get your users into the journey you’ve crafted for them.
+    text: Something
     button:
       url: ''
       text: Button text
       open_in_new_tab: false
+  styles:
     background_variant: dark
-  
 ---
