--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,20 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: simple/card
+    content:
+      imagery:
+      heading:
+      text: >-
+        These versatile cards can be used to talk about your services or
+        products, or anything else you are keen to share with your audience.
+        They come with an action link to get your users into the journey you’ve
+        crafted for them.
+      button:
+          url: ''
+          text: Button text
+          open_in_new_tab: false
+    styles:
+      background_variant: dark
 ---
