--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -51,5 +51,5 @@ content_blocks:
         onclick:
     styles:
       map_alignment: Right
-      background_variant: dark
+      background_variant: secondary
 ---
