--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,52 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: sections/left-right-block--featured-map
-    content:
-      display_social_icons: true
-      heading: A contact block
-      description: >-
-        This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers. This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers.  This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers.  This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers.  This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers.  This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers.  This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers.  This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers. 
-      contact_details:
-        - _type: Email
-          text: 'Email address: mybusiness@business.com'
-          hero_icon_name: envelope
-        - _type: Phone
-          text: 'Phone number: 312 325 326'
-          hero_icon_name: phone
-        - _type: Address
-          text: 'Address: 1 Fake St, Faketown'
-          hero_icon_name: map-pin
-        - _type: Hours
-          text: 'Opening hours: 9-5pm, Monday to Friday'
-          hero_icon_name: clock
-      button:
-        _bookshop_name: generic/button
-        url: '#'
-        open_in_new_tab: false
-        text: Button text
-        variant: primary
-        disabled: false
-        arrow: right
-        onclick:
-    styles:
-      map_alignment: Right
-      background_variant: secondary
+content_blocks: []
 ---
